--- a/story.html
+++ b/story.html
@@ -10,6 +10,8 @@
 	</header>
 
 	<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Alexandre Gorius">
+	<a href="https://cdn-images-1.medium.com/max/1200/1*PJ1e4fSfw9I9FuuQC2QTug@2x.jpeg" alt="Alexandre Gorius2"></a>
+	<a href="https://cdn-images-1.medium.com/max/2000/1*Tv_yJYpQCI_A9x1rsMEnkA.jpeg" alt="Alexandre Gorius3"></a>
 
 	<h3>Preamble</h3>
 	<p>
@@ -54,49 +56,19 @@
 			</tr>
 			<tr>
 				<td>Avoid war</td>
-				<td><strong>Maybe</strong></td>
+				<td><strong>Maybe</strong></td>	
 			</tr>
 		</table>
+			
+		
 
 		<p>Table representing the farmer's philosophy.</p>
 
 	<h3>Conclusion</h3>
-		<p>Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...</p>
+		<p class="Good">Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...</p>
 
 	<footer>
 		Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
 	</footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-   +-------------------+---------------------+
-   |                   |                     |
-   | Event             |  Good or Bad ?      |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Lose a horse      |  Maybe              |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Win more horses   |  Maybe              |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Son injury        |  Maybe              |
-   +-------------------+---------------------+
-   |                   |                     |
-   | Avoid war	       |  Maybe              |
-   +-------------------+---------------------+
-   Table representing the farmer's philosophy.
-   
-   
-Conclusion  
-Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...
-
-----
-Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
