--- a/story.html
+++ b/story.html
@@ -10,8 +10,8 @@
 	</header>
 
 	<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Alexandre Gorius">
-	<a href="https://cdn-images-1.medium.com/max/1200/1*PJ1e4fSfw9I9FuuQC2QTug@2x.jpeg" alt="Alexandre Gorius2"></a>
-	<a href="https://cdn-images-1.medium.com/max/2000/1*Tv_yJYpQCI_A9x1rsMEnkA.jpeg" alt="Alexandre Gorius3"></a>
+	<img src="https://cdn-images-1.medium.com/max/1200/1*PJ1e4fSfw9I9FuuQC2QTug@2x.jpeg" alt="Alexandre Gorius2"></a>
+	<img src="https://cdn-images-1.medium.com/max/2000/1*Tv_yJYpQCI_A9x1rsMEnkA.jpeg" alt="Alexandre Gorius3"></a>
 
 	<h3>Preamble</h3>
 	<p>
