--- a/story.html
+++ b/story.html
@@ -10,9 +10,10 @@
 	</header>
 
 	<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Alexandre Gorius">
-	<img src="https://cdn-images-1.medium.com/max/1200/1*PJ1e4fSfw9I9FuuQC2QTug@2x.jpeg" alt="Alexandre Gorius2"></a>
-	<img src="https://cdn-images-1.medium.com/max/2000/1*Tv_yJYpQCI_A9x1rsMEnkA.jpeg" alt="Alexandre Gorius3"></a>
-
+	<img src="https://cdn-images-1.medium.com/max/1200/1*PJ1e4fSfw9I9FuuQC2QTug@2x.jpeg" alt="Alexandre Gorius2">
+	<img src="https://cdn-images-1.medium.com/max/2000/1*Tv_yJYpQCI_A9x1rsMEnkA.jpeg" alt="Alexandre Gorius3">
+	<a href="https://www.lifewire.com/why-use-semantic-html-3468271" alt="Semantics101"></a>
+	
 	<h3>Preamble</h3>
 	<p>
 		<ul>
@@ -21,7 +22,6 @@
 			<li>then tell it to your best friend</li>
 		</ul>
 	</p>
-
 
 	<h2>The story</h2>
 
