--- a/story.html
+++ b/story.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="styles.css">
 	<title>The story of the Chinese farmer</title>
 </head>
 <body>
 	<header>
 	<h1>The story of the Chinese farmer</h1>
-	<h3>11 may 2016, Alexandre Gorius</h3>
+	11 may 2016, Alexandre Gorius
 	</header>
-
+<br>
 	<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Alexandre Gorius">
 	<img src="https://cdn-images-1.medium.com/max/1200/1*PJ1e4fSfw9I9FuuQC2QTug@2x.jpeg" alt="Alexandre Gorius2">
 	<img src="https://cdn-images-1.medium.com/max/2000/1*Tv_yJYpQCI_A9x1rsMEnkA.jpeg" alt="Alexandre Gorius3"><br>
@@ -26,9 +27,9 @@
 
 	<h2>The story</h2>
 
-		<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said, “<strong>Maybe</strong>.” The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The farmer again said, “<strong>Maybe</strong>.” </p>
+		<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q>We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q><strong>Maybe</strong>.</q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q>Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said, <q><strong>Maybe</strong>.</q> </p>
 
-		<p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, “<strong>Maybe</strong>.” The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, “<strong>Maybe</strong>”</p>
+		<p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, <q>Oh dear, that’s too bad,</q> and the farmer responded, <q><strong>Maybe</strong>.</q> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q>Isn’t that great!</q> Again, he said, <q><strong>Maybe</strong></q></p>
 
 		<p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.</p>
 
@@ -60,8 +61,6 @@
 				<td><strong>Maybe</strong></td>
 			</tr>
 		</table>
-
-
 
 		<p>Table representing the farmer's philosophy.</p>
 
