--- a/story.html
+++ b/story.html
@@ -27,11 +27,11 @@
 
 	<h2>The story</h2>
 
-		<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q>We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q><strong>Maybe</strong>.</q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q>Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said, <q><strong>Maybe</strong>.</q> </p>
+		<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q class="Villagers">We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said, <q class="Farmer"><strong>Maybe</strong>.</q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q class="Villagers">Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said, <q class="Farmer"><strong>Maybe</strong>.</q> </p>
 
-		<p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, <q>Oh dear, that’s too bad,</q> and the farmer responded, <q><strong>Maybe</strong>.</q> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q>Isn’t that great!</q> Again, he said, <q><strong>Maybe</strong></q></p>
+		<p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, <q class="Villagers">Oh dear, that’s too <span class="Bad">bad</span>,</q> and the farmer responded, <q class="Farmer"><strong>Maybe</strong>.</q> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q class="Villagers">Isn’t that great!</q> Again, he said, <q class="Farmer"><strong>Maybe</strong></q></p>
 
-		<p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.</p>
+		<p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is <span class="Good">good</span> or <span class="Bad">bad</span> — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of <span class="Good">good</span> fortune.</p>
 
 		<p>Alan Watts</p>
 
@@ -42,7 +42,7 @@
 		<table border= "1">
 			<tr>
 				<th>Event</th>
-				<th>Good or Bad?</th>
+				<th><span class= "Good">Good</span> or <span class="Bad">Bad</span>?</th>
 			</tr>
 			<tr>
 				<td>Lose a horse</td>
@@ -65,7 +65,7 @@
 		<p>Table representing the farmer's philosophy.</p>
 
 	<h3>Conclusion</h3>
-		<p><span class="Good">Good</span> and <span class="Bad">Bad</span> are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...</p>
+		<p><span class="Good">Good</span> and <span class="Bad">Bad</span> are just one perspective. Bananas are <class="Good">good</class> for monkeys, but monkeys are not <class="Good">good</class> for bananas. Let's not make a big deal out of it...</p>
 
 	<footer>
 		Copyright Just Another Company 2017. All right reserved. <br>
