--- a/story.html
+++ b/story.html
@@ -17,13 +17,12 @@
 	<a href="https://www.youtube.com/watch?v=OX0OARBqBp0&vl=en" alt="Video Story" target="_blank" title="Videotime">Story by video</a>
 
 	<h3>Preamble</h3>
-	<p>
-		<ul>
-			<li>read this twice</li>
-			<li>then read it again</li>
-			<li>then tell it to your best friend</li>
-		</ul>
-	</p>
+
+			<ul>
+				<li id="thumbsup">read this twice</li>
+				<li id="thumbsdown">then read it again</li>
+				<li id="cat">then tell it to your best friend</li>
+			</ul>
 
 	<h2>The story</h2>
 
