Edit after validator

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Alexandre Gorius">
 	<img src="https://cdn-images-1.medium.com/max/1200/1*PJ1e4fSfw9I9FuuQC2QTug@2x.jpeg" alt="Alexandre Gorius2">
 	<img src="https://cdn-images-1.medium.com/max/2000/1*Tv_yJYpQCI_A9x1rsMEnkA.jpeg" alt="Alexandre Gorius3"><br>
-	<a href="https://www.lifewire.com/why-use-semantic-html-3468271" alt="Semantics101" target="_blank" title="Semantics101">Semantics101</a><br><br>
-	<a href="https://www.youtube.com/watch?v=OX0OARBqBp0&vl=en" alt="Video Story" target="_blank" title="Videotime">Story by video</a>
+	<a href="https://www.lifewire.com/why-use-semantic-html-3468271" target="_blank" title="Semantics101">Semantics101</a><br><br>
+	<a href="https://www.youtube.com/watch?v=OX0OARBqBp0&vl=en" target="_blank" title="Videotime">Story by video</a>
 
 	<h3>Preamble</h3>
 
@@ -38,7 +38,7 @@
 ----
 
 	<h3>Here is this dialog in the form of a table</h3>
-		<table border= "1">
+		<table>
 			<tr>
 				<th>Event</th>
 				<th><span class= "Good">Good</span> or <span class="Bad">Bad</span>?</th>
@@ -64,7 +64,7 @@
 		<p>Table representing the farmer's philosophy.</p>
 
 	<h3>Conclusion</h3>
-		<p><span class="Good">Good</span> and <span class="Bad">Bad</span> are just one perspective. Bananas are <class="Good">good</class> for monkeys, but monkeys are not <class="Good">good</class> for bananas. Let's not make a big deal out of it...</p>
+		<p><span class="Good">Good</span> and <span class="Bad">Bad</span> are just one perspective. Bananas are <span class="Good">good</span> for monkeys, but monkeys are not <span class="Good">good</span> for bananas. Let's not make a big deal out of it...</p>
 
 	<footer>
 		Copyright Just Another Company 2017. All right reserved. <br>
